--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,3 +20,7 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  twitter_key: <%= ENV['TWITTER_KEY'] %>
+  twitter_secret: <%= ENV['TWITTER_SECRET'] %>
+  twitter_access_token: <%= ENV['TWITTER_ACCESS_TOKEN'] %>
+  twitter_access_token_secret: <%= ENV['TWITTER_ACCESS_TOKEN_SECRET'] %>
